# Flipkart-Cloud-Native-AI-Assistant

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
flipkart/: __init__.py  config.py  rag_chain.py
prometheus/: prometheus-configmap.yaml
