[project]
name = "flipkart-product-recommender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.5.0",
    "flask>=3.1.2",
    "langchain>=1.2.7",
    "langchain-astradb>=1.0.0",
    "langchain-classic>=1.0.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-groq>=1.1.1",
    "langchain-huggingface>=1.2.0",
    "pandas>=3.0.0",
    "prometheus-client>=0.24.1",
    "pypdf>=6.6.2",
    "python-dotenv>=1.2.1",
    "setuptools>=80.10.2",
]
